Added feature scaling tasks and implementations

--- a/src/Module 6/Feature Scaling & Encoding Categorical Data/Ques_1.ipynb
+++ b/src/Module 6/Feature Scaling & Encoding Categorical Data/Ques_1.ipynb
@@ -2,126 +2,123 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy with Min-Max Scaling: 0.9666666666666667\n",
+      "Cross-Validation Accuracy with Min-Max Scaling: 0.9083333333333334\n",
+      "Accuracy with Standard Scaling: 0.9666666666666667\n",
+      "Cross-Validation Accuracy with Standard Scaling: 0.9583333333333334\n",
+      "Accuracy with Robust Scaling: 0.9666666666666667\n",
+      "Cross-Validation Accuracy with Robust Scaling: 0.9166666666666666\n"
+     ]
+    }
+   ],
    "source": [
-    "# Question 1: Feature Scaling\n",
-    "# Task: Explain why feature scaling is essential and demonstrate the impact of unscaled features on a machine learning model.\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "# Question 2: Min-Max Scaling\n",
-    "# Task: Implement Min-Max Scaling on the Iris dataset.\n",
-    "\n",
-    "\n",
-    "\n",
-    "# Question 3: Standardization (Z-score Scaling)\n",
-    "# Task: Implement Standardization using Z-score scaling on the Iris dataset.\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "# Question 4: Robust Scaling\n",
-    "# Task: Implement Robust Scaling to handle outliers in the Iris dataset.\n",
-    "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "from sklearn.datasets import load_iris\n",
-    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import train_test_split, cross_val_score\n",
     "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.metrics import accuracy_score\n",
     "from sklearn.preprocessing import MinMaxScaler, StandardScaler, RobustScaler\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.datasets import load_iris\n",
     "\n",
-    "# Question 1: Feature Scaling\n",
-    "def feature_scaling_impact():\n",
-    "    # Load the Iris dataset\n",
-    "    iris = load_iris()\n",
-    "    X = iris.data\n",
-    "    y = iris.target\n",
+    "# Load Iris dataset\n",
+    "data = load_iris()\n",
+    "X = pd.DataFrame(data.data, columns=data.feature_names)\n",
+    "y = pd.Series(data.target)\n",
     "\n",
-    "    # Split into training and test sets\n",
-    "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)\n",
+    "# Function for applying different scalers\n",
+    "def scale_data(X, method='minmax'):\n",
+    "    try:\n",
+    "        if method == 'minmax':\n",
+    "            scaler = MinMaxScaler()\n",
+    "        elif method == 'standard':\n",
+    "            scaler = StandardScaler()\n",
+    "        elif method == 'robust':\n",
+    "            scaler = RobustScaler()\n",
+    "        else:\n",
+    "            raise ValueError(\"Invalid scaling method. Choose 'minmax', 'standard', or 'robust'.\")\n",
+    "        \n",
+    "        X_scaled = scaler.fit_transform(X)\n",
+    "        return X_scaled\n",
+    "    except ValueError as e:\n",
+    "        print(f\"ValueError: {e}\")\n",
+    "        return None\n",
+    "    except Exception as e:\n",
+    "        print(f\"Unexpected error: {e}\")\n",
+    "        return None\n",
     "\n",
-    "    # Unscaled model\n",
-    "    model_unscaled = LogisticRegression(max_iter=200)\n",
-    "    model_unscaled.fit(X_train, y_train)\n",
-    "    y_pred_unscaled = model_unscaled.predict(X_test)\n",
-    "    accuracy_unscaled = accuracy_score(y_test, y_pred_unscaled)\n",
+    "# Function for model fitting and evaluation with exception handling\n",
+    "def fit_model(X_train, X_test, y_train, y_test):\n",
+    "    try:\n",
+    "        model = LogisticRegression(max_iter=200)\n",
+    "        model.fit(X_train, y_train)\n",
+    "        y_pred = model.predict(X_test)\n",
+    "        accuracy = accuracy_score(y_test, y_pred)\n",
+    "        return accuracy\n",
+    "    except ValueError as e:\n",
+    "        print(f\"ValueError: {e}\")\n",
+    "        return None\n",
+    "    except Exception as e:\n",
+    "        print(f\"Unexpected error: {e}\")\n",
+    "        return None\n",
     "\n",
-    "    # Min-Max Scaling\n",
-    "    scaler = MinMaxScaler()\n",
-    "    X_train_scaled = scaler.fit_transform(X_train)\n",
-    "    X_test_scaled = scaler.transform(X_test)\n",
+    "# Function for model fitting with cross-validation\n",
+    "def fit_model_with_cv(X, y):\n",
+    "    try:\n",
+    "        model = LogisticRegression(max_iter=200)\n",
+    "        cv_scores = cross_val_score(model, X, y, cv=5)  # 5-fold cross-validation\n",
+    "        return cv_scores.mean()  # Mean score across folds\n",
+    "    except ValueError as e:\n",
+    "        print(f\"ValueError: {e}\")\n",
+    "        return None\n",
+    "    except Exception as e:\n",
+    "        print(f\"Unexpected error: {e}\")\n",
+    "        return None\n",
     "\n",
-    "    # Scaled model\n",
-    "    model_scaled = LogisticRegression(max_iter=200)\n",
-    "    model_scaled.fit(X_train_scaled, y_train)\n",
-    "    y_pred_scaled = model_scaled.predict(X_test_scaled)\n",
-    "    accuracy_scaled = accuracy_score(y_test, y_pred_scaled)\n",
+    "# Split data into training and test sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
-    "    print(f\"Accuracy without scaling: {accuracy_unscaled:.4f}\")\n",
-    "    print(f\"Accuracy with Min-Max scaling: {accuracy_scaled:.4f}\")\n",
+    "# Example: Min-Max Scaling\n",
+    "X_train_scaled = scale_data(X_train, method='minmax')\n",
+    "X_test_scaled = scale_data(X_test, method='minmax')\n",
     "\n",
-    "# Question 2: Min-Max Scaling\n",
-    "def min_max_scaling():\n",
-    "    iris = load_iris()\n",
-    "    X = iris.data\n",
+    "# Fit model and evaluate with Min-Max Scaling\n",
+    "accuracy_minmax = fit_model(X_train_scaled, X_test_scaled, y_train, y_test)\n",
+    "print(f\"Accuracy with Min-Max Scaling: {accuracy_minmax}\")\n",
     "\n",
-    "    # Min-Max Scaling\n",
-    "    scaler = MinMaxScaler()\n",
-    "    X_scaled = scaler.fit_transform(X)\n",
+    "# Perform cross-validation with Min-Max Scaling\n",
+    "cv_accuracy_minmax = fit_model_with_cv(X_train_scaled, y_train)\n",
+    "print(f\"Cross-Validation Accuracy with Min-Max Scaling: {cv_accuracy_minmax}\")\n",
     "\n",
-    "    # Displaying first 5 rows of the scaled dataset\n",
-    "    scaled_df = pd.DataFrame(X_scaled, columns=iris.feature_names)\n",
-    "    print(\"Min-Max Scaled Data:\")\n",
-    "    print(scaled_df.head())\n",
+    "# Example: Standard Scaling (Z-score Scaling)\n",
+    "X_train_scaled = scale_data(X_train, method='standard')\n",
+    "X_test_scaled = scale_data(X_test, method='standard')\n",
     "\n",
-    "# Question 3: Standardization (Z-score Scaling)\n",
-    "def standardization():\n",
-    "    iris = load_iris()\n",
-    "    X = iris.data\n",
+    "# Fit model and evaluate with Standard Scaling\n",
+    "accuracy_standard = fit_model(X_train_scaled, X_test_scaled, y_train, y_test)\n",
+    "print(f\"Accuracy with Standard Scaling: {accuracy_standard}\")\n",
     "\n",
-    "    # Standardization using Z-score Scaling\n",
-    "    scaler = StandardScaler()\n",
-    "    X_standardized = scaler.fit_transform(X)\n",
+    "# Perform cross-validation with Standard Scaling\n",
+    "cv_accuracy_standard = fit_model_with_cv(X_train_scaled, y_train)\n",
+    "print(f\"Cross-Validation Accuracy with Standard Scaling: {cv_accuracy_standard}\")\n",
     "\n",
-    "    # Displaying first 5 rows of the standardized dataset\n",
-    "    standardized_df = pd.DataFrame(X_standardized, columns=iris.feature_names)\n",
-    "    print(\"Standardized (Z-score) Data:\")\n",
-    "    print(standardized_df.head())\n",
+    "# Example: Robust Scaling\n",
+    "X_train_scaled = scale_data(X_train, method='robust')\n",
+    "X_test_scaled = scale_data(X_test, method='robust')\n",
     "\n",
-    "# Question 4: Robust Scaling\n",
-    "def robust_scaling():\n",
-    "    iris = load_iris()\n",
-    "    X = iris.data\n",
+    "# Fit model and evaluate with Robust Scaling\n",
+    "accuracy_robust = fit_model(X_train_scaled, X_test_scaled, y_train, y_test)\n",
+    "print(f\"Accuracy with Robust Scaling: {accuracy_robust}\")\n",
     "\n",
-    "    # Robust Scaling\n",
-    "    scaler = RobustScaler()\n",
-    "    X_robust_scaled = scaler.fit_transform(X)\n",
-    "\n",
-    "    # Displaying first 5 rows of the robustly scaled dataset\n",
-    "    robust_scaled_df = pd.DataFrame(X_robust_scaled, columns=iris.feature_names)\n",
-    "    print(\"Robust Scaled Data:\")\n",
-    "    print(robust_scaled_df.head())\n",
-    "\n",
-    "# Running all tasks\n",
-    "if __name__ == \"__main__\":\n",
-    "    print(\"Question 1: Feature Scaling Impact on Model\\n\")\n",
-    "    feature_scaling_impact()\n",
-    "    print(\"\\nQuestion 2: Min-Max Scaling\\n\")\n",
-    "    min_max_scaling()\n",
-    "    print(\"\\nQuestion 3: Standardization (Z-score Scaling)\\n\")\n",
-    "    standardization()\n",
-    "    print(\"\\nQuestion 4: Robust Scaling\\n\")\n",
-    "    robust_scaling()\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "# Perform cross-validation with Robust Scaling\n",
+    "cv_accuracy_robust = fit_model_with_cv(X_train_scaled, y_train)\n",
+    "print(f\"Cross-Validation Accuracy with Robust Scaling: {cv_accuracy_robust}\")\n"
    ]
   }
  ],
