--- a/src/Module 6/Hands-on - Feature Engineering & Data Transformation/Ques_1.ipynb
+++ b/src/Module 6/Hands-on - Feature Engineering & Data Transformation/Ques_1.ipynb
@@ -2,9 +2,56 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CSV file 'sales_data.csv' created successfully.\n",
+      "Original DataFrame:\n",
+      "   Store  Monthly_Sales\n",
+      "0      1           1500\n",
+      "1      2           2000\n",
+      "2      3           1800\n",
+      "3      4           3000\n",
+      "4      5          40000\n",
+      "\n",
+      "Number of rows removed: 1\n",
+      "\n",
+      "Cleaned DataFrame (first 5 rows):\n",
+      "   Store  Monthly_Sales\n",
+      "0      1           1500\n",
+      "1      2           2000\n",
+      "2      3           1800\n",
+      "3      4           3000\n",
+      "5      6           2500\n",
+      "\n",
+      "Original DataFrame Summary:\n",
+      "count       10.000000\n",
+      "mean      5930.000000\n",
+      "std      11977.947329\n",
+      "min       1500.000000\n",
+      "25%       1925.000000\n",
+      "50%       2150.000000\n",
+      "75%       2450.000000\n",
+      "max      40000.000000\n",
+      "Name: Monthly_Sales, dtype: float64\n",
+      "\n",
+      "Cleaned DataFrame Summary:\n",
+      "count       9.000000\n",
+      "mean     2144.444444\n",
+      "std       433.333333\n",
+      "min      1500.000000\n",
+      "25%      1900.000000\n",
+      "50%      2100.000000\n",
+      "75%      2300.000000\n",
+      "max      3000.000000\n",
+      "Name: Monthly_Sales, dtype: float64\n"
+     ]
+    }
+   ],
    "source": [
     "# Detect & Remove Outliers using IQR Method\n",
     "\n",
@@ -17,7 +64,22 @@
     "#     4. Remove Outliers: Remove the outliers from the dataset.\n",
     "#     5. Verify: Ensure the outliers are removed by checking the size or summary statistics of the dataset before and after the removal.\n",
     "    \n",
-    "    \n",
+    "import pandas as pd\n",
+    "\n",
+    "# Create the sample dataset\n",
+    "data = {\n",
+    "    'Store': [1, 2, 3, 4, 5, 6, 7, 8, 9, 10],\n",
+    "    'Monthly_Sales': [1500, 2000, 1800, 3000, 40000, 2500, 2200, 2100, 1900, 2300]\n",
+    "}\n",
+    "\n",
+    "# Convert to DataFrame\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# Save to CSV\n",
+    "df.to_csv('sales_data.csv', index=False)\n",
+    "\n",
+    "print(\"CSV file 'sales_data.csv' created successfully.\")\n",
+    "\n",
     "    \n",
     "\n",
     "# Task:\n",
@@ -32,14 +94,63 @@
     "\n",
     "\n",
     "\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Step 1: Load the dataset\n",
+    "df = pd.read_csv('sales_data.csv')\n",
+    "\n",
+    "# Display the first few rows to inspect the dataset\n",
+    "print(\"Original DataFrame:\")\n",
+    "print(df.head())\n",
+    "\n",
+    "# Step 2: Calculate Q1, Q3, and IQR for Monthly_Sales\n",
+    "Q1 = df['Monthly_Sales'].quantile(0.25)\n",
+    "Q3 = df['Monthly_Sales'].quantile(0.75)\n",
+    "IQR = Q3 - Q1\n",
+    "\n",
+    "# Step 3: Identify outliers using the IQR method\n",
+    "lower_bound = Q1 - 1.5 * IQR\n",
+    "upper_bound = Q3 + 1.5 * IQR\n",
+    "\n",
+    "# Step 4: Filter out the outliers\n",
+    "df_cleaned = df[(df['Monthly_Sales'] >= lower_bound) & (df['Monthly_Sales'] <= upper_bound)]\n",
+    "\n",
+    "# Step 5: Verify the number of rows removed\n",
+    "rows_removed = len(df) - len(df_cleaned)\n",
+    "print(\"\\nNumber of rows removed:\", rows_removed)\n",
+    "\n",
+    "# Display the cleaned DataFrame\n",
+    "print(\"\\nCleaned DataFrame (first 5 rows):\")\n",
+    "print(df_cleaned.head())\n",
+    "\n",
+    "# Optionally: Show summary statistics of the original and cleaned dataset\n",
+    "print(\"\\nOriginal DataFrame Summary:\")\n",
+    "print(df['Monthly_Sales'].describe())\n",
+    "\n",
+    "print(\"\\nCleaned DataFrame Summary:\")\n",
+    "print(df_cleaned['Monthly_Sales'].describe())\n",
     "\n",
     "\n"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
