Implement IQR method to detect and remove outliers in Monthly_Sales column

--- a/src/Module 6/Hands-on - Feature Engineering & Data Transformation/Ques_1.ipynb
+++ b/src/Module 6/Hands-on - Feature Engineering & Data Transformation/Ques_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -10,13 +10,6 @@
      "output_type": "stream",
      "text": [
       "CSV file 'sales_data.csv' created successfully.\n",
-      "Original DataFrame:\n",
-      "   Store  Monthly_Sales\n",
-      "0      1           1500\n",
-      "1      2           2000\n",
-      "2      3           1800\n",
-      "3      4           3000\n",
-      "4      5          40000\n",
       "\n",
       "Number of rows removed: 1\n",
       "\n",
@@ -26,29 +19,7 @@
       "1      2           2000\n",
       "2      3           1800\n",
       "3      4           3000\n",
-      "5      6           2500\n",
-      "\n",
-      "Original DataFrame Summary:\n",
-      "count       10.000000\n",
-      "mean      5930.000000\n",
-      "std      11977.947329\n",
-      "min       1500.000000\n",
-      "25%       1925.000000\n",
-      "50%       2150.000000\n",
-      "75%       2450.000000\n",
-      "max      40000.000000\n",
-      "Name: Monthly_Sales, dtype: float64\n",
-      "\n",
-      "Cleaned DataFrame Summary:\n",
-      "count       9.000000\n",
-      "mean     2144.444444\n",
-      "std       433.333333\n",
-      "min      1500.000000\n",
-      "25%      1900.000000\n",
-      "50%      2100.000000\n",
-      "75%      2300.000000\n",
-      "max      3000.000000\n",
-      "Name: Monthly_Sales, dtype: float64\n"
+      "5      6           2500\n"
      ]
     }
    ],
@@ -96,41 +67,61 @@
     "\n",
     "import pandas as pd\n",
     "\n",
-    "# Step 1: Load the dataset\n",
-    "df = pd.read_csv('sales_data.csv')\n",
+    "def remove_outliers_iqr(file_path):\n",
+    "    try:\n",
+    "        # Step 1: Load the dataset\n",
+    "        df = pd.read_csv(file_path)\n",
+    "        \n",
+    "        # Check if the dataset is empty\n",
+    "        if df.empty:\n",
+    "            print(\"The dataset is empty. Exiting...\")\n",
+    "            return None\n",
     "\n",
-    "# Display the first few rows to inspect the dataset\n",
-    "print(\"Original DataFrame:\")\n",
-    "print(df.head())\n",
+    "        # Ensure the dataset has the 'Monthly_Sales' column\n",
+    "        if 'Monthly_Sales' not in df.columns:\n",
+    "            print(\"'Monthly_Sales' column is missing from the dataset. Exiting...\")\n",
+    "            return None\n",
     "\n",
-    "# Step 2: Calculate Q1, Q3, and IQR for Monthly_Sales\n",
-    "Q1 = df['Monthly_Sales'].quantile(0.25)\n",
-    "Q3 = df['Monthly_Sales'].quantile(0.75)\n",
-    "IQR = Q3 - Q1\n",
+    "        # Step 2: Calculate Q1, Q3, and IQR for Monthly_Sales\n",
+    "        Q1 = df['Monthly_Sales'].quantile(0.25)\n",
+    "        Q3 = df['Monthly_Sales'].quantile(0.75)\n",
+    "        IQR = Q3 - Q1\n",
     "\n",
-    "# Step 3: Identify outliers using the IQR method\n",
-    "lower_bound = Q1 - 1.5 * IQR\n",
-    "upper_bound = Q3 + 1.5 * IQR\n",
+    "        # Step 3: Identify outliers using the IQR method\n",
+    "        lower_bound = Q1 - 1.5 * IQR\n",
+    "        upper_bound = Q3 + 1.5 * IQR\n",
     "\n",
-    "# Step 4: Filter out the outliers\n",
-    "df_cleaned = df[(df['Monthly_Sales'] >= lower_bound) & (df['Monthly_Sales'] <= upper_bound)]\n",
+    "        # Step 4: Filter out the outliers\n",
+    "        df_cleaned = df[(df['Monthly_Sales'] >= lower_bound) & (df['Monthly_Sales'] <= upper_bound)]\n",
     "\n",
-    "# Step 5: Verify the number of rows removed\n",
-    "rows_removed = len(df) - len(df_cleaned)\n",
-    "print(\"\\nNumber of rows removed:\", rows_removed)\n",
+    "        # Step 5: Verify the number of rows removed\n",
+    "        rows_removed = len(df) - len(df_cleaned)\n",
+    "        print(f\"\\nNumber of rows removed: {rows_removed}\")\n",
     "\n",
-    "# Display the cleaned DataFrame\n",
-    "print(\"\\nCleaned DataFrame (first 5 rows):\")\n",
-    "print(df_cleaned.head())\n",
+    "        # Display cleaned dataset or summary statistics\n",
+    "        print(\"\\nCleaned DataFrame (first 5 rows):\")\n",
+    "        print(df_cleaned.head())\n",
     "\n",
-    "# Optionally: Show summary statistics of the original and cleaned dataset\n",
-    "print(\"\\nOriginal DataFrame Summary:\")\n",
-    "print(df['Monthly_Sales'].describe())\n",
+    "        return df_cleaned\n",
     "\n",
-    "print(\"\\nCleaned DataFrame Summary:\")\n",
-    "print(df_cleaned['Monthly_Sales'].describe())\n",
+    "    except FileNotFoundError:\n",
+    "        print(f\"Error: The file '{file_path}' was not found.\")\n",
+    "        return None\n",
+    "    except pd.errors.EmptyDataError:\n",
+    "        print(f\"Error: The file '{file_path}' is empty.\")\n",
+    "        return None\n",
+    "    except Exception as e:\n",
+    "        print(f\"An unexpected error occurred: {e}\")\n",
+    "        return None\n",
     "\n",
-    "\n"
+    "\n",
+    "# Example usage\n",
+    "file_path = 'sales_data.csv'\n",
+    "cleaned_data = remove_outliers_iqr(file_path)\n",
+    "\n",
+    "if cleaned_data is not None:\n",
+    "    # You can continue with further analysis or saving the cleaned dataset if needed\n",
+    "    cleaned_data.to_csv('cleaned_sales_data.csv', index=False)\n"
    ]
   }
  ],
