--- a/src/Module 6/Automating Data Cleaning and Best Practices in Data Preprocessing/Ques_1.ipynb
+++ b/src/Module 6/Automating Data Cleaning and Best Practices in Data Preprocessing/Ques_1.ipynb
@@ -25,11 +25,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   sepal length (cm)  sepal width (cm)  petal length (cm)  petal width (cm)\n",
+      "0          -0.900681          1.019004          -1.340227         -1.315444\n",
+      "1          -1.143017         -0.131979          -1.340227         -1.315444\n",
+      "2          -1.385353          0.328414          -1.397064         -1.315444\n",
+      "3          -1.506521          0.098217          -1.283389         -1.315444\n",
+      "4          -1.021849          1.249201          -1.340227         -1.315444\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your code from here\n"
+    "# Write your code from here\n",
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "\n",
+    "# Step 1: Load a sample dataset\n",
+    "# Let's use the Iris dataset as an example\n",
+    "from sklearn.datasets import load_iris\n",
+    "data = load_iris()\n",
+    "df = pd.DataFrame(data.data, columns=data.feature_names)\n",
+    "\n",
+    "# Step 2: Define a pipeline\n",
+    "# Here, we will apply StandardScaler to scale all numerical features\n",
+    "numeric_features = df.columns\n",
+    "\n",
+    "# Define a pipeline to scale the data\n",
+    "pipeline = Pipeline(steps=[\n",
+    "    ('scaler', StandardScaler())\n",
+    "])\n",
+    "\n",
+    "# Step 3: Fit and transform the data using the pipeline\n",
+    "scaled_data = pipeline.fit_transform(df)\n",
+    "\n",
+    "# Step 4: Show the scaled data\n",
+    "scaled_df = pd.DataFrame(scaled_data, columns=df.columns)\n",
+    "print(scaled_df.head())\n",
+    "\n"
    ]
   },
   {
@@ -45,17 +86,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Feature1  Feature2\n",
+      "0      1.00  3.666667\n",
+      "1      2.00  2.000000\n",
+      "2      3.00  3.666667\n",
+      "3      2.75  4.000000\n",
+      "4      5.00  5.000000\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your code from here"
+    "# Write your code from here\n",
+    "import pandas as pd\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "\n",
+    "# Step 1: Load a dataset with missing values\n",
+    "# Creating a sample dataset with missing values for illustration\n",
+    "data = {'Feature1': [1, 2, 3, None, 5],\n",
+    "        'Feature2': [None, 2, None, 4, 5]}\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# Step 2: Define a pipeline\n",
+    "# Here, we will apply SimpleImputer to fill missing values with the mean\n",
+    "pipeline = Pipeline(steps=[\n",
+    "    ('imputer', SimpleImputer(strategy='mean'))\n",
+    "])\n",
+    "\n",
+    "# Step 3: Fit and transform the data using the pipeline\n",
+    "imputed_data = pipeline.fit_transform(df)\n",
+    "\n",
+    "# Step 4: Show the imputed data\n",
+    "imputed_df = pd.DataFrame(imputed_data, columns=df.columns)\n",
+    "print(imputed_df)\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -69,7 +146,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
