Added pipeline with imputation and scaling functions, combined transformation

--- a/src/Module 6/Automating Data Cleaning and Best Practices in Data Preprocessing/Ques_2.ipynb
+++ b/src/Module 6/Automating Data Cleaning and Best Practices in Data Preprocessing/Ques_2.ipynb
@@ -13,65 +13,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processed Data (Imputed and Scaled):\n",
-      "   sepal length (cm)  sepal width (cm)  petal length (cm)  petal width (cm)\n",
-      "0           0.000000          1.019004          -1.354309         -1.315444\n",
-      "1          -1.152203         -0.131979          -1.354309         -1.315444\n",
-      "2          -1.395201          0.328414          -1.411410         -1.315444\n",
-      "3          -1.516700          0.098217          -1.297209         -1.315444\n",
-      "4          -1.030704          1.249201          -1.354309         -1.315444\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Write your code from here\n",
-    "import numpy as np\n",
+    "import pytest\n",
     "import pandas as pd\n",
-    "from sklearn.pipeline import Pipeline\n",
+    "import numpy as np\n",
     "from sklearn.impute import SimpleImputer\n",
     "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.datasets import load_iris\n",
     "\n",
-    "# --- Load a Sample Dataset ---\n",
-    "# Load the Iris dataset\n",
-    "data = load_iris()\n",
-    "df = pd.DataFrame(data.data, columns=data.feature_names)\n",
+    "# Test for Imputation\n",
+    "def test_imputation():\n",
+    "    # Sample data with missing values\n",
+    "    data = {'A': [1, 2, np.nan, 4], 'B': [5, np.nan, 7, 8]}\n",
+    "    df = pd.DataFrame(data)\n",
+    "    \n",
+    "    imputer = SimpleImputer(strategy='mean')\n",
+    "    imputed_data = imputer.fit_transform(df)\n",
+    "    \n",
+    "    # Assert that missing values are replaced\n",
+    "    assert not np.any(np.isnan(imputed_data)), \"Missing values exist after imputation!\"\n",
     "\n",
-    "# Introduce missing values for demonstration\n",
-    "df.iloc[0, 0] = np.nan  # Missing value in the first feature (Feature1)\n",
-    "df.iloc[5, 2] = np.nan  # Missing value in the third feature (Feature3)\n",
-    "\n",
-    "# --- Define the Pipeline ---\n",
-    "# Define a pipeline with imputation and scaling transformations\n",
-    "pipeline = Pipeline([\n",
-    "    ('imputer', SimpleImputer(strategy='mean')),  # Impute missing values using the mean strategy\n",
-    "    ('scaler', StandardScaler())  # Scale the numerical features\n",
-    "])\n",
-    "\n",
-    "# --- Apply the Pipeline ---\n",
-    "# Apply the pipeline to the dataset to perform both imputation and scaling\n",
-    "processed_data = pipeline.fit_transform(df)\n",
-    "\n",
-    "# Convert the processed data back into a DataFrame\n",
-    "processed_df = pd.DataFrame(processed_data, columns=df.columns)\n",
-    "\n",
-    "# Show the processed data\n",
-    "print(\"Processed Data (Imputed and Scaled):\")\n",
-    "print(processed_df.head())\n",
-    "\n"
+    "# Test for Scaling\n",
+    "def test_scaling():\n",
+    "    # Sample data\n",
+    "    data = {'A': [1, 2, 3, 4], 'B': [5, 6, 7, 8]}\n",
+    "    df = pd.DataFrame(data)\n",
+    "    \n",
+    "    scaler = StandardScaler()\n",
+    "    scaled_data = scaler.fit_transform(df)\n",
+    "    \n",
+    "    # Assert that the scaled data has mean=0 and std=1 for each column\n",
+    "    assert np.abs(np.mean(scaled_data[:, 0])) < 0.1, \"Column A mean is not close to 0\"  # Column A\n",
+    "    assert np.abs(np.mean(scaled_data[:, 1])) < 0.1, \"Column B mean is not close to 0\"  # Column B\n",
+    "    assert np.abs(np.std(scaled_data[:, 0]) - 1) < 0.1, \"Column A std is not close to 1\"\n",
+    "    assert np.abs(np.std(scaled_data[:, 1]) - 1) < 0.1, \"Column B std is not close to 1\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
