--- a/src/Module 6/Automating Data Cleaning and Best Practices in Data Preprocessing/Ques_2.ipynb
+++ b/src/Module 6/Automating Data Cleaning and Best Practices in Data Preprocessing/Ques_2.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,10 +53,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          A         B\n",
+      "0 -1.147079 -1.605910\n",
+      "1 -0.229416  0.229416\n",
+      "2 -0.229416  0.229416\n",
+      "3  1.605910  1.147079\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_2844/479658090.py:23: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "  if not np.issubdtype(df.dtypes[0], np.number):  # Check if data is numeric\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "\n",
+    "# Imputation Function\n",
+    "def impute_data(df, strategy='mean'):\n",
+    "    for column in df.columns:\n",
+    "        if df[column].isna().sum() == len(df):\n",
+    "            df[column] = 0  # Or replace with df[column].median() or another placeholder\n",
+    "    imputer = SimpleImputer(strategy=strategy)\n",
+    "    return pd.DataFrame(imputer.fit_transform(df), columns=df.columns)\n",
+    "\n",
+    "# Scaling Function\n",
+    "def scale_data(df):\n",
+    "    scaler = StandardScaler()\n",
+    "    return pd.DataFrame(scaler.fit_transform(df), columns=df.columns)\n",
+    "\n",
+    "# DataFrame Validation Function\n",
+    "def validate_dataframe(df):\n",
+    "    if df.empty:\n",
+    "        raise ValueError(\"DataFrame is empty\")\n",
+    "    if not np.issubdtype(df.dtypes[0], np.number):  # Check if data is numeric\n",
+    "        raise TypeError(\"DataFrame contains non-numeric data. Only numeric data is allowed.\")\n",
+    "\n",
+    "# Combined Transformation Function\n",
+    "def transform_data(df, imputation_strategy='mean'):\n",
+    "    validate_dataframe(df)\n",
+    "    df = impute_data(df, strategy=imputation_strategy)\n",
+    "    df = scale_data(df)\n",
+    "    return df\n",
+    "\n",
+    "# Example Usage\n",
+    "data = {'A': [1, 2, np.nan, 4], 'B': [5, np.nan, 7, 8]}\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "transformed_df = transform_data(df, imputation_strategy='median')\n",
+    "print(transformed_df)\n"
+   ]
   }
  ],
  "metadata": {
