--- a/src/Module 7/Introduction to Data Quality Metrics & Measurement/Ques_1.ipynb
+++ b/src/Module 7/Introduction to Data Quality Metrics & Measurement/Ques_1.ipynb
@@ -11,23 +11,157 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"100%\"\n",
+       "            height=\"650\"\n",
+       "            src=\"http://127.0.0.1:8050/\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "            \n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x740d9444ae30>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "# Write your code from here"
+    "import dash\n",
+    "from dash import dcc, html\n",
+    "import plotly.graph_objs as go\n",
+    "import pandas as pd\n",
+    "from datetime import datetime\n",
+    "\n",
+    "# Sample dataset\n",
+    "data = {\n",
+    "    'customer_id': [1, 2, 3, 4, 5],\n",
+    "    'name': ['John', 'Jane', 'Alice', 'Bob', 'Charlie'],\n",
+    "    'email': ['john@example.com', 'jane@example.com', None, 'bob@example.com', 'charlie@example.com'],\n",
+    "    'order_date': ['2023-01-01', '2023-03-01', '2022-07-15', '2023-04-10', '2023-02-20']\n",
+    "}\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# Data Quality Metrics\n",
+    "def calculate_completeness(df):\n",
+    "    missing_data = df.isnull().sum().sum()\n",
+    "    total_data = df.size\n",
+    "    completeness = 100 - (missing_data / total_data * 100)\n",
+    "    return completeness\n",
+    "\n",
+    "def calculate_uniqueness(df, column):\n",
+    "    duplicate_count = df[column].duplicated().sum()\n",
+    "    uniqueness = 100 - (duplicate_count / len(df) * 100)\n",
+    "    return uniqueness\n",
+    "\n",
+    "def calculate_timeliness(df, date_column):\n",
+    "    # Assuming today's date is the reference for timeliness\n",
+    "    today = datetime.today()\n",
+    "    df[date_column] = pd.to_datetime(df[date_column])\n",
+    "    max_date = df[date_column].max()\n",
+    "    days_since_last_update = (today - max_date).days\n",
+    "    return days_since_last_update\n",
+    "\n",
+    "def calculate_consistency(df, column):\n",
+    "    # Example consistency check (email format check)\n",
+    "    valid_email_count = df[column].apply(lambda x: isinstance(x, str) and \"@\" in x).sum()\n",
+    "    consistency = valid_email_count / len(df) * 100\n",
+    "    return consistency\n",
+    "\n",
+    "# Calculate data quality metrics\n",
+    "completeness_score = calculate_completeness(df)\n",
+    "uniqueness_score = calculate_uniqueness(df, 'customer_id')\n",
+    "timeliness_score = calculate_timeliness(df, 'order_date')\n",
+    "consistency_score = calculate_consistency(df, 'email')\n",
+    "\n",
+    "# Initialize Dash app\n",
+    "app = dash.Dash(__name__)\n",
+    "\n",
+    "# Layout of the dashboard\n",
+    "app.layout = html.Div([\n",
+    "    html.H1(\"Data Quality Dashboard\", style={'textAlign': 'center'}),\n",
+    "\n",
+    "    html.Div([\n",
+    "        html.Div([\n",
+    "            html.H3(\"Completeness\"),\n",
+    "            html.Div(f\"Completeness Score: {completeness_score:.2f}%\"),\n",
+    "        ], style={'padding': 10, 'width': '45%', 'display': 'inline-block'}),\n",
+    "\n",
+    "        html.Div([\n",
+    "            html.H3(\"Uniqueness\"),\n",
+    "            html.Div(f\"Uniqueness Score: {uniqueness_score:.2f}%\"),\n",
+    "        ], style={'padding': 10, 'width': '45%', 'display': 'inline-block'}),\n",
+    "\n",
+    "    ], style={'display': 'flex', 'justifyContent': 'space-between'}),\n",
+    "\n",
+    "    html.Div([\n",
+    "        html.Div([\n",
+    "            html.H3(\"Timeliness\"),\n",
+    "            html.Div(f\"Days Since Last Update: {timeliness_score} days\"),\n",
+    "        ], style={'padding': 10, 'width': '45%', 'display': 'inline-block'}),\n",
+    "\n",
+    "        html.Div([\n",
+    "            html.H3(\"Consistency\"),\n",
+    "            html.Div(f\"Consistency Score: {consistency_score:.2f}%\"),\n",
+    "        ], style={'padding': 10, 'width': '45%', 'display': 'inline-block'}),\n",
+    "\n",
+    "    ], style={'display': 'flex', 'justifyContent': 'space-between'}),\n",
+    "\n",
+    "    html.Div([\n",
+    "        dcc.Graph(\n",
+    "            id='data-quality-graph',\n",
+    "            figure={\n",
+    "                'data': [\n",
+    "                    go.Bar(\n",
+    "                        x=['Completeness', 'Uniqueness', 'Timeliness', 'Consistency'],\n",
+    "                        y=[completeness_score, uniqueness_score, 100 - timeliness_score, consistency_score],\n",
+    "                        name='Data Quality Score'\n",
+    "                    )\n",
+    "                ],\n",
+    "                'layout': go.Layout(\n",
+    "                    title='Data Quality Metrics',\n",
+    "                    xaxis={'title': 'Metric'},\n",
+    "                    yaxis={'title': 'Score (%)'}\n",
+    "                )\n",
+    "            }\n",
+    "        )\n",
+    "    ])\n",
+    "])\n",
+    "\n",
+    "# Run the app\n",
+    "if __name__ == '__main__':\n",
+    "    app.run(debug=True)\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.12.7"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
