--- a/src/Module 7/Introduction to Data Quality Metrics & Measurement/Ques_1.ipynb
+++ b/src/Module 7/Introduction to Data Quality Metrics & Measurement/Ques_1.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +29,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x740d9444ae30>"
+       "<IPython.lib.display.IFrame at 0x740d9452f640>"
       ]
      },
      "metadata": {},
