Add Data Quality Dashboard with Dash

--- a/src/Module 7/Introduction to Data Quality Metrics & Measurement/Ques_1.ipynb
+++ b/src/Module 7/Introduction to Data Quality Metrics & Measurement/Ques_1.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +29,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x740d9452f640>"
+       "<IPython.lib.display.IFrame at 0x740d9465bca0>"
       ]
      },
      "metadata": {},
@@ -54,29 +54,59 @@
     "df = pd.DataFrame(data)\n",
     "\n",
     "# Data Quality Metrics\n",
+    "\n",
     "def calculate_completeness(df):\n",
+    "    \"\"\"\n",
+    "    Calculates the completeness of the dataset.\n",
+    "    Completeness is defined as the percentage of non-missing values in the entire dataset.\n",
+    "    \"\"\"\n",
     "    missing_data = df.isnull().sum().sum()\n",
     "    total_data = df.size\n",
     "    completeness = 100 - (missing_data / total_data * 100)\n",
     "    return completeness\n",
     "\n",
     "def calculate_uniqueness(df, column):\n",
+    "    \"\"\"\n",
+    "    Calculates the uniqueness of the dataset based on the specified column.\n",
+    "    Uniqueness is defined as the percentage of unique entries in the given column.\n",
+    "    \"\"\"\n",
+    "    if column not in df.columns:\n",
+    "        raise ValueError(f\"Column '{column}' not found in the dataset\")\n",
     "    duplicate_count = df[column].duplicated().sum()\n",
     "    uniqueness = 100 - (duplicate_count / len(df) * 100)\n",
     "    return uniqueness\n",
     "\n",
     "def calculate_timeliness(df, date_column):\n",
-    "    # Assuming today's date is the reference for timeliness\n",
+    "    \"\"\"\n",
+    "    Calculates the timeliness of the dataset based on the last update date.\n",
+    "    Timeliness is defined as the number of days since the most recent update.\n",
+    "    \"\"\"\n",
+    "    # Ensure date_column exists and handle missing values\n",
+    "    if date_column not in df.columns:\n",
+    "        raise ValueError(f\"Column '{date_column}' not found in the dataset\")\n",
+    "    \n",
+    "    df[date_column] = pd.to_datetime(df[date_column], errors='coerce')  # Convert to datetime, errors become NaT\n",
+    "    if df[date_column].isnull().any():\n",
+    "        raise ValueError(f\"Invalid date values found in column '{date_column}'\")\n",
+    "    \n",
+    "    # Drop missing dates before calculating timeliness\n",
+    "    df = df.dropna(subset=[date_column])\n",
+    "    \n",
     "    today = datetime.today()\n",
-    "    df[date_column] = pd.to_datetime(df[date_column])\n",
     "    max_date = df[date_column].max()\n",
     "    days_since_last_update = (today - max_date).days\n",
     "    return days_since_last_update\n",
     "\n",
     "def calculate_consistency(df, column):\n",
-    "    # Example consistency check (email format check)\n",
-    "    valid_email_count = df[column].apply(lambda x: isinstance(x, str) and \"@\" in x).sum()\n",
-    "    consistency = valid_email_count / len(df) * 100\n",
+    "    \"\"\"\n",
+    "    Calculates the consistency of the dataset based on the specified column.\n",
+    "    Consistency is defined as the percentage of valid (non-null) entries in the column.\n",
+    "    \"\"\"\n",
+    "    if column not in df.columns:\n",
+    "        raise ValueError(f\"Column '{column}' not found in the dataset\")\n",
+    "    \n",
+    "    valid_entries = df[column].apply(lambda x: isinstance(x, str) and \"@\" in x).sum()\n",
+    "    consistency = valid_entries / len(df) * 100\n",
     "    return consistency\n",
     "\n",
     "# Calculate data quality metrics\n",
