Implement consistency check between orders and order_items datasets

--- a/src/Module 7/Measuring Data Accuracy, Completeness & Consistency/Ques_7.ipynb
+++ b/src/Module 7/Measuring Data Accuracy, Completeness & Consistency/Ques_7.ipynb
@@ -11,93 +11,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CSV file 'orders.csv' created successfully.\n",
-      "CSV file 'order_items.csv' created successfully.\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Write your code from here\n",
-    "import pandas as pd\n",
-    "\n",
-    "# Sample data for orders.csv\n",
-    "orders_data = {\n",
-    "    'order_id': [1, 2, 3, 4, 5],\n",
-    "    'customer_id': [1001, 1002, 1003, 1004, 1005],\n",
-    "    'order_date': ['2023-01-01', '2023-01-02', '2023-01-03', '2023-01-04', '2023-01-05']\n",
-    "}\n",
-    "\n",
-    "# Create DataFrame\n",
-    "orders_df = pd.DataFrame(orders_data)\n",
-    "\n",
-    "# Save to CSV\n",
-    "orders_df.to_csv('orders.csv', index=False)\n",
-    "print(\"CSV file 'orders.csv' created successfully.\")\n",
-    "import pandas as pd\n",
-    "\n",
-    "# Sample data for order_items.csv\n",
-    "order_items_data = {\n",
-    "    'order_id': [1, 1, 2, 3, 3, 4, 5, 5],\n",
-    "    'item_id': [101, 102, 103, 104, 105, 106, 107, 108],\n",
-    "    'item_name': ['Product A', 'Product B', 'Product C', 'Product D', 'Product E', 'Product F', 'Product G', 'Product H'],\n",
-    "    'quantity': [2, 1, 1, 3, 2, 1, 2, 1],\n",
-    "    'price': [50.0, 30.0, 100.0, 25.0, 40.0, 60.0, 80.0, 90.0]\n",
-    "}\n",
-    "\n",
-    "# Create DataFrame\n",
-    "order_items_df = pd.DataFrame(order_items_data)\n",
-    "\n",
-    "# Save to CSV\n",
-    "order_items_df.to_csv('order_items.csv', index=False)\n",
-    "print(\"CSV file 'order_items.csv' created successfully.\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "All orders have corresponding items.\n",
-      "All order items are linked to existing orders.\n"
+      "All orders have corresponding items in order_items.csv.\n"
      ]
     }
    ],
    "source": [
     "import pandas as pd\n",
+    "import os\n",
     "\n",
-    "# Load orders and order_items datasets\n",
-    "orders_df = pd.read_csv('orders.csv')\n",
-    "order_items_df = pd.read_csv('order_items.csv')\n",
+    "# Function to load a CSV file with error handling\n",
+    "def load_csv(file_path):\n",
+    "    try:\n",
+    "        # Check if file exists\n",
+    "        if not os.path.exists(file_path):\n",
+    "            raise FileNotFoundError(f\"File '{file_path}' not found.\")\n",
+    "        \n",
+    "        # Load the CSV file into a DataFrame\n",
+    "        df = pd.read_csv(file_path)\n",
+    "        \n",
+    "        # Check for missing columns in the expected format\n",
+    "        required_columns = ['order_id']  # Assuming 'order_id' is required in both datasets\n",
+    "        if not all(col in df.columns for col in required_columns):\n",
+    "            raise ValueError(f\"The CSV file '{file_path}' is missing required columns.\")\n",
+    "        \n",
+    "        return df\n",
+    "    \n",
+    "    except FileNotFoundError as e:\n",
+    "        print(f\"Error: {e}\")\n",
+    "        return None\n",
+    "    except ValueError as e:\n",
+    "        print(f\"Error: {e}\")\n",
+    "        return None\n",
+    "    except pd.errors.EmptyDataError:\n",
+    "        print(f\"Error: The file '{file_path}' is empty.\")\n",
+    "        return None\n",
+    "    except Exception as e:\n",
+    "        print(f\"An unexpected error occurred while reading '{file_path}': {e}\")\n",
+    "        return None\n",
     "\n",
-    "# Check if each order in orders has corresponding items in order_items\n",
-    "missing_orders = orders_df[~orders_df['order_id'].isin(order_items_df['order_id'])]\n",
+    "# Function to perform the consistency check\n",
+    "def check_consistency(orders_df, order_items_df):\n",
+    "    if orders_df is None or order_items_df is None:\n",
+    "        print(\"One or both datasets failed to load, exiting the check.\")\n",
+    "        return\n",
     "\n",
-    "# Check if there are order_items with no corresponding order in orders\n",
-    "orphaned_items = order_items_df[~order_items_df['order_id'].isin(orders_df['order_id'])]\n",
+    "    # Ensure order_ids are in the same format for both datasets\n",
+    "    orders_df['order_id'] = orders_df['order_id'].astype(str)\n",
+    "    order_items_df['order_id'] = order_items_df['order_id'].astype(str)\n",
+    "    \n",
+    "    # Merge the two datasets on 'order_id' to find matching entries\n",
+    "    merged_df = pd.merge(orders_df, order_items_df, on='order_id', how='left', indicator=True)\n",
+    "    \n",
+    "    # Identify orders that have no corresponding items\n",
+    "    missing_items = merged_df[merged_df['_merge'] == 'left_only']\n",
+    "    \n",
+    "    # Display the missing order IDs\n",
+    "    if not missing_items.empty:\n",
+    "        print(f\"Orders missing corresponding items: {missing_items['order_id'].tolist()}\")\n",
+    "    else:\n",
+    "        print(\"All orders have corresponding items in order_items.csv.\")\n",
+    "    \n",
+    "    # Optionally, you could save the missing items to a new CSV\n",
+    "    missing_items.to_csv('missing_order_items.csv', index=False)\n",
     "\n",
-    "# Output the results\n",
-    "if not missing_orders.empty:\n",
-    "    print(\"Orders with no corresponding items in order_items:\")\n",
-    "    print(missing_orders)\n",
-    "else:\n",
-    "    print(\"All orders have corresponding items.\")\n",
+    "# Main function to load data and check consistency\n",
+    "def main():\n",
+    "    orders_file = 'orders.csv'\n",
+    "    order_items_file = 'order_items.csv'\n",
     "\n",
-    "if not orphaned_items.empty:\n",
-    "    print(\"\\nOrder items with no corresponding orders in orders:\")\n",
-    "    print(orphaned_items)\n",
-    "else:\n",
-    "    print(\"All order items are linked to existing orders.\")\n"
+    "    # Load the datasets\n",
+    "    orders_df = load_csv(orders_file)\n",
+    "    order_items_df = load_csv(order_items_file)\n",
+    "    \n",
+    "    # Perform the consistency check\n",
+    "    check_consistency(orders_df, order_items_df)\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()\n"
    ]
   }
  ],
