Added data quality monitoring system to track accuracy and completeness over time in Ques_6.ipynb

--- a/src/Module 7/Measuring Data Accuracy, Completeness & Consistency/Ques_6.ipynb
+++ b/src/Module 7/Measuring Data Accuracy, Completeness & Consistency/Ques_6.ipynb
@@ -39,6 +39,27 @@
       "amount            20.0\n",
       "date              20.0\n",
       "dtype: float64\n",
+      "Mismatch Rate: 40.0%\n",
+      "Running data quality check...\n",
+      "Missing Data Rate:\n",
+      "transaction_id    20.0\n",
+      "amount            20.0\n",
+      "date              20.0\n",
+      "dtype: float64\n",
+      "Mismatch Rate: 40.0%\n",
+      "Running data quality check...\n",
+      "Missing Data Rate:\n",
+      "transaction_id    20.0\n",
+      "amount            20.0\n",
+      "date              20.0\n",
+      "dtype: float64\n",
+      "Mismatch Rate: 40.0%\n",
+      "Running data quality check...\n",
+      "Missing Data Rate:\n",
+      "transaction_id    20.0\n",
+      "amount            20.0\n",
+      "date              20.0\n",
+      "dtype: float64\n",
       "Mismatch Rate: 40.0%\n"
      ]
     }
